fix: logo jump

--- a/app/themes/hunger-tv/assets/styles/components/hero.scss
+++ b/app/themes/hunger-tv/assets/styles/components/hero.scss
@@ -18,11 +18,10 @@
 	display: none;
 	align-items: center;
 	position: absolute;
-	top: 30%;
+	top: 25vh;
 	right: 0;
 	left: 0;
 	width: 100%;
-	// height: 100%;
 	margin: auto;
 
 	svg {
